# dyntamic

./: LICENSE  README.md  pyproject.toml
src/dyntamic/: factory.py
tests/: test.py
